<resources>
    <string name="app_name">买豆粕</string>
    <string name="label_login">登录</string>
    <string name="label_register">注册</string>
    <string name="label_find_password">找回密码</string>
    <string name="label_submit">提交</string>
    <string name="label_confirm">确认</string>
    <string name="hint_phone">输入手机号</string>
    <string name="hint_password">输入密码</string>
    <string name="please_input_phone_and_password">请输入手机号和密码</string>
    <string name="hint_verify_password">输入密码</string>
    <string name="hint_verify_password_2">再次输入密码</string>
    <string name="hint_verify_code">输入动态码</string>
    <string name="label_main">首页</string>
    <string name="no_signal_exception">亲，没找到您的网络啦，请检查网络配置</string>
    <string name="net_work_exception">网络异常,请检查您的网络</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">刷新中</string>
    <string name="xlistview_header_last_time">上次更新:</string>
    <string name="xlistview_header_unsupport_last_time">上次更新:%1$s</string>
    <string name="xlistview_header_hint_success">更新成功</string>
    <string name="xlistview_header_hint_fail">更新失败</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">加载中…</string>
    <string name="xlistview_footer_hint_no_more">没有更多了</string>
    <string name="listview_footer_hint_no_more_price">没有更多报价了</string>
    <string name="listview_footer_hint_no_more">没有更多了</string>
    <string name="my_not_login_username_text">还未登录</string>
    <string name="my_order_text">我的订单</string>
    <string name="my_order_watch_text">查看全部订单</string>
    <string name="orders">全部订单</string>
    <string name="click_login">点击登录/注册</string>
    <string name="set_login_password">请设置登录密码</string>
    <string name="set_pay_password2">请设置支付密码</string>
    <string name="set_pay_password3">请设置新支付密码</string>
    <string name="my_delivery_text">我的提货单</string>
    <string name="my_delivery_watch_text">查看全部提货单</string>
    <string name="my_message_text">消息列表</string>
    <string name="my_remind_text">提醒设置</string>
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="Sun">日</string>
    <string name="computer_operation_text">未完成买家认证,无法下单购买</string>
    <string name="computer_operation_message">\t\t    请在电脑上访问买豆粕网站（www.maidou.com）,登录后在“我的业务”里找到“我的身份”这个选项,并在电脑上完成认证。</string>
    <string name="order_text">买卖双方都将支付保证金,支付货款时保证金抵扣</string>
    <string name="deposit_text">保证金(元)</string>
    <string name="order_compute_1">保证金金额=(%1$s%2$s%3$s)*%4$s*%5$s。</string>
    <string name="order_buyer_rule">购买吨数（库存%1$s吨，%2$s吨起售）</string>
    <string name="order_compute_2">保证金金额计算方法：(前一交易日%1$s收盘价+基差价格)*购买数量*保证金比例。</string>
    <string name="computer_operation_message_1">\t\t请在电脑上访问买豆粕网站（www.maidou.com）,登录后在“我的业务”里找到这笔订单, 然后操作。</string>
    <string name="order_limited_quantity">本商品最少购买%1$s吨</string>
    <string name="order_success_text">下单成功&#160;!</string>
    <string name="order_success_text2">下单成功</string>
    <string name="order_success_message_1">请联系财务员在报价有效时间内尽快签署合同并支付保证金。</string>
    <string name="order_success_message_2">报价有效时间</string>
    <string name="order_success_message_3">卖家也可能随时更改报价,未支付保证金的订单将不受保护。</string>
    <string name="seller_title">卖家：</string>
    <string name="order_success_message_4">财务员联系方式: %1$s</string>
    <string name="order_detail_btn_text">查看订单详情</string>
    <string name="delivery_detail_btn_text">查看提货单详情</string>
    <string name="order_go_back_quote">返回报价</string>
    <string name="quote_empty_view_text">抱歉没有找到相应的报价，请调整筛选条件，或者联系客服</string>
    <string name="most_new_news">最新资讯</string>
    <string name="all">全部栏目</string>
    <string name="string_company">登录后可买卖豆粕</string>
    <string name="my_membership_level">会员等级说明</string>
    <string name="reload_text">点击屏幕重新加载</string>
    <string name="tv_release_info">买豆粕网系统升级中，请稍后再访问...</string>
    <string name="contact_type">客服热线：021-54180258（工作日上午9:00--下午6:00)\n邮箱地址：沈女士 shenjiali@maidoupo.com\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;李女士 liyiling@maidoupo.com</string>
    <string name="no_cms_dta">抱歉，该栏目暂无资讯</string>
    <string name="user_introduction_info">真实、详细的介绍信息，有助于提升信誉度，达成更多交易。买家介绍必填</string>
    <string name="user_introduction">卖家介绍:&#160;</string>
    <string name="seller_name">卖家名称:&#160;</string>
    <string name="please_input_user_introduction_with_length_limited">请输入卖家介绍，字数10-200</string>
    <string name="please_input_buyer_introduction_with_length_limited">请输入买家介绍，字数10-200</string>
    <string name="buyer_introduction">买家介绍:</string>
    <string name="post">提交</string>
    <string name="confirm_assign_platform_agreement">确认签署网站入驻协议</string>
    <string name="payment_limited_info">密码必须6-16位，包含字母和数字，与登录密码不同</string>
    <string name="payment_limited_info2">密码6-16位，包含字母和数字，请重新输入</string>
    <string name="set_payment_password">设置密码</string>
    <string name="legal_people_information">请填写法人资料</string>
    <string name="legal_person_information">法人资料</string>
    <string name="legal_people_name">法人姓名：</string>
    <string name="please_input_legal_people_name">输入法人姓名</string>
    <string name="legal_people_id_card">法人身份证号码:</string>
    <string name="please_input_legal_people_id_card3">输入身份证号</string>
    <string name="please_input_legal_people_id_card">输入法人身份证号码</string>
    <string name="please_input_legal_people_id_card2">&#160;&#160;&#160;&#160;&#160;请输入法人身份证号码</string>
    <string name="please_input_legal_right_people_id_card">请输入正确法人身份证号码</string>
    <string name="please_input_legal_right_people_id_card6">请输入正确身份证号码</string>
    <string name="company_code_type">请选择企业代码类型</string>
    <string name="company_type">企业代码类型</string>
    <string name="company_type_code">企业代码</string>
    <string name="uniform_standard_credit_code">统一社会信用代码</string>
    <string name="please_uniform_standard_credit_code">请输入正确统一社会信用代码</string>
    <string name="organize_structural_code">组织机构代码</string>
    <string name="company_info">请填写企业资料</string>
    <string name="company_info2">企业资料</string>
    <string name="company_name">企业名称：</string>
    <string name="please_input_credit_code">输入代码号</string>
    <string name="message_dynamic_code">短信动态码:</string>
    <string name="register_mobile_number">注册手机号:</string>
    <string name="please_input_received_dynamic_code">输入动态码</string>
    <string name="organization_code">组织机构代码:</string>
    <string name="organization_code6">企业代码:</string>
    <string name="organization_code2">输入组织机构代码</string>
    <string name="organization_code3">输入正确组织机构代码</string>
    <string name="please_input_organization_code">输入企业代码</string>
    <string name="new_payment_password">新支付密码:</string>
    <string name="new_payment_password_again">新支付密码:</string>
    <string name="please_input_new_payment_password">输入新支付密码</string>
    <string name="please_input_new_payment_password_again">请再次输入新的支付密码</string>
    <string name="please_input_payment_password">支付密码</string>
    <string name="please_input_payment_password_again">再次输入支付密码</string>
    <string name="please_input_payment_password_again1">再次输入密码:</string>
    <string name="confirm_modify">确认修改</string>
    <string name="password_modify">修改</string>
    <string name="id_authenticate_text">我的身份</string>
    <string name="certify_authenticate_text">认证身份</string>
    <string name="authenticate_certify_text">身份认证</string>
    <string name="check_it">查看</string>
    <string name="string_authenticate_details_waiting">您提交的“个人身份认证”资料将在1个工作日内审核完成，请耐心等待。有疑问请联系：021-54180258</string>
    <string name="string_authenticate_details_waiting_company">您提交的“企业身份认证”资料将在1个工作日内审核完成，请耐心等待。有疑问请联系：021-54180258</string>
    <string name="sign_bank_account">绑定银行卡</string>
    <string name="string_authenticate_second_step_info">身份认证通过后才能签约</string>
    <string name="string_pay_safe"><![CDATA[为了您的资金安全，请用电脑访问买豆粕网www.maidoupo.com 登录后进入”我的业务>我的身份>身份认证“完成此步骤]]></string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="string_authenticate_third_step_info">银行签约后才能设置</string>
    <string name="assign_platform_agreement">签署网站入驻协议</string>
    <string name="string_authenticate_four_step_info">设置支付密码后才能签署</string>
    <string name="input_user_introduction">填写用户介绍</string>
    <string name="string_authenticate_fifth_step_info">签署完网站入驻协议后才能填写</string>
    <string name="person">我是个人</string>
    <string name="person1">个人</string>
    <string name="company">我是企业</string>
    <string name="company2">企业</string>
    <string name="person_certify">认证个人身份</string>
    <string name="about_app">关于买豆粕</string>
    <string name="check_version">检查新版本</string>
    <string name="function_introduce">功能介绍</string>
    <string name="afterwards">以后再说</string>
    <string name="right_now_upgrade">马上更新</string>
    <string name="finance_officer_buy_jurisdiction">买家权限：签署合同，支付保证金／支付货款／支付补充打款</string>
    <string name="finance_officer_seller_jurisdiction">卖家权限：签署合同，支付保证金／支付补充打款</string>
    <string name="trader_jurisdiction">交易员：挂单，输入点价结果</string>
    <string name="salesman_buyer_jurisdiction">买家权限：查看报价/下订单，发起提货/确认收货/发起补充打款，发起点价</string>
    <string name="salesman_seller_jurisdiction">卖家权限：发布报价/确认订单，确认提货/发起补充打款</string>
    <string name="admin_success">已认证：%s用户(管理员)</string>
    <string name="child_success">已关联：%s</string>
    <string name="admin_fail">审核未通过，请按要求重新提交</string>
    <string name="admin_init">身份认证后，即可买豆粕</string>
    <string name="admin_process">审核中</string>
    <string name="admin_step_one">完成剩余4步，即可开始买豆粕啦！</string>
    <string name="admin_step_two">完成剩余3步，即可开始买豆粕啦！</string>
    <string name="admin_step_three">完成剩余2步，即可开始买豆粕啦！</string>
    <string name="admin_step_four">完成剩余1步，即可开始买豆粕啦！</string>
    <string name="all_step_done">您已完成认证签约流程，现在可以开始买豆粕啦！</string>
    <string name="assign_platform_agreement_success">签署入驻协议成功</string>
    <string name="personality_information">请填写个人资料</string>
    <string name="personality_information2">个人资料</string>
    <string name="people_name">姓名:</string>
    <string name="people_name2">输入姓名</string>
    <string name="people_id_card">身份证号:</string>
    <string name="people_id_card2">输入身份证号</string>
    <string name="relevant_credentials">请上传相关证件照片</string>
    <string name="relevant_credentials2">相关证件照片</string>
    <string name="id_front">身份证正面</string>
    <string name="id_background">身份证背面</string>
    <string name="handle_id_card_front_picture">手持身份证正面照</string>
    <string name="take_picture_from_camera">拍照</string>
    <string name="gallery">本地相册</string>
    <string name="permissions_tips_gallery">这个App请求访问你的相册</string>
    <string name="permissions_tips_call">这个App请求拨打电话</string>
    <string name="permissions_write_and_read">这个App请求访问你的存储</string>
    <string name="permissions_phone_and_location_storage">这个App请求如下权限</string>
    <string name="service_phone">拨打客服热线：</string>
    <string name="ping_an_easy_pay">平安易宝</string>
    <string name="back_type">农业银行</string>
    <string name="step1_ongoing">我是企业：认证企业身份，获取买豆粕网专属身份。还可以开通\n业务员、财务员多个子账号，流程完备，方便管理。\n我是个人：认证个人身份，以个人身份买卖豆粕。</string>
    <string name="i_m_company">我是企业：</string>
    <string name="i_m_company_details">认证企业身份，获取买豆粕网专属身份。还可以开通业务员、财务员多个子账号，流程完备，方便管理。</string>
    <string name="i_m_person_details">认证个人身份，以个人身份买卖豆粕。</string>
    <string name="i_m_person">我是个人：</string>
    <string name="tv_ping_an_bank_card">其它银行转账至您的平安易宝账户：</string>
    <string name="account">账号：</string>
    <string name="copy_card">复制账号</string>
    <string name="bank_introduce">若您是通过买豆粕网注册平安易宝账户，开户行名 称为平安银行上海古北支行 ；若您是通过其他渠道 注册平安易宝账户，开户行名称请在平安易宝官网的 【资金划出】栏目中查询。</string>
    <string name="transform_info">平安易宝仅能接收同户名账户转账充值，非同户名 充值将被拒绝并原路退回。</string>
</resources>