<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_background_gray"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/dim40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim34"
            android:layout_marginRight="@dimen/dim34"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim125"
                android:gravity="center_vertical"
                android:text="@string/user_introduction_info"
                android:textColor="@color/global_text_gray"
                android:textSize="@dimen/txt30" />


            <TextView
                android:textSize="@dimen/txt34"
                style="@style/modify_pay_password_text_left_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim40"
                android:text="@string/buyer_introduction" />


            <EditText
                android:layout_marginTop="@dimen/dim40"
                android:id="@+id/et_buyer"
                style="@style/user_introduction"
                android:textSize="@dimen/txt34"
                android:background="@drawable/common_edittext_shape"
                android:hint="@string/please_input_buyer_introduction_with_length_limited" />

            <TextView
                android:id="@+id/tv_post_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim80"
                android:background="@drawable/confirm_modify_bg"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>